details shim, extraction table
Former-commit-id: 71ab167c6aff6f658ec68fb5907783d1614e6816 [formerly 59c63ae04c9117773e67ecf34b193685ac737dea]
Former-commit-id: 840d13cd7f911c6e887f961d5c6a246f78821f68

--- a/css/_layout.nest.css
+++ b/css/_layout.nest.css
@@ -43,7 +43,26 @@ figcaption {
 
 .note:hover {
   background-color: #3c3c0a;
-  cursor: pointer; }
+  cursor: help; }
 
 .tooltip_templates {
   display: none; }
+
+summary {
+  outline: none; }
+
+table {
+  border-collapse: collapse;
+  border: 1px solid #50500f;
+  font-size: 0.8rem; }
+
+th, td {
+  padding: 5px 10px;
+  border: 1px solid #50500f; }
+
+th {
+  background: rgba(50, 50, 0, 0.6);
+  letter-spacing: 1px; }
+
+tr:nth-child(2n) {
+  background: rgba(50, 50, 0, 0.6); }
