--- a/css/content.scss
+++ b/css/content.scss
@@ -1,5 +1,6 @@
 @import '_layout.scss';
 @import '_tooltipster.scss';
+@import 'bourbon/bourbon';
 
 html {
     color: rgb(247,247,220);
@@ -258,3 +259,10 @@ ul {
   margin-right: 20px;
   letter-spacing: 2px;
 }
+
+details, summary {display: block;}
+details.details_shim_closed > * {display: none;}
+details.details_shim_closed > summary {display: block;}
+details.details_shim_open   > summary {display: block;}
+details.details_shim_closed > summary:before {display: inline-block; content: "\25b6"; padding: 0 0.1em; margin-right: 0.4em; font-size: 0.9em;}
+details.details_shim_open   > summary:before {display: inline-block; content: "\25bc"; padding: 0; margin-right: 0.35em;}
