--- a/css/_layout.scss
+++ b/css/_layout.scss
@@ -10,6 +10,7 @@ $sideRadius: 1.5rem 0 0 1.5rem;
 $mainPad: 15px;
 $anchorColor: rgb(250, 200, 25);
 $headingColor: rgb(145, 140, 45);
+$darkAccent: rgb(80, 80, 15);
 $introRadius: 0 1.5rem 1.5rem 0;
 $figcapSize: 0.8rem;
 
@@ -60,13 +61,36 @@ figcaption {
 
  .note:hover {
    background-color: rgb(60,60,10);
-   cursor: pointer;
+   cursor: help;
  }
 
  .tooltip_templates {
    display: none;
  }
 
+summary {
+  outline: none;
+}
+
+ table {
+   border-collapse: collapse;
+   border: 1px solid $darkAccent;
+   font-size: 0.8rem;
+ }
+
+ th, td {
+   padding: 5px 10px;
+   border: 1px solid $darkAccent;
+ }
+
+th {
+  background: $outerBkgd;
+  letter-spacing: 1px;
+}
+
+tr:nth-child(2n){
+  background: $outerBkgd;
+}
 @mixin RadiusOut {
   -moz-border-radius: $outRadius;
   -webkit-border-radius: $outRadius;
