--- a/css/main.nest.css
+++ b/css/main.nest.css
@@ -37,9 +37,32 @@ figcaption {
   width: 90%; }
 
 .note {
-  font-size: 1.3rem;
-  color: #fadc64;
-  background-color: black; }
+  font-weight: 600;
+  font-size: 0.6rem;
+  color: yellow; }
+
+.note:hover {
+  background-color: #3c3c0a;
+  cursor: help; }
+
+.tooltip_templates {
+  display: none; }
+
+table {
+  border-collapse: collapse;
+  border: 1px solid #50500f;
+  font-size: 0.8rem; }
+
+th, td {
+  padding: 5px 10px;
+  border: 1px solid #50500f; }
+
+th {
+  background: rgba(50, 50, 0, 0.6);
+  letter-spacing: 1px; }
+
+tr:nth-child(2n) {
+  background: rgba(50, 50, 0, 0.6); }
 
 /* This is the core CSS of Tooltipster */
 /* GENERAL STRUCTURE RULES (do not edit this section) */
@@ -209,7 +232,7 @@ figcaption {
     opacity: 1; } }
 
 .tooltipster-update-fade {
-  animation: tooltipster-fading 400ms; }
+  animation: tooltipster-fading 200ms; }
 
 /* rotate */
 @keyframes tooltipster-rotating {
@@ -242,7 +265,7 @@ figcaption {
 /* .tooltipster-box */
 .tooltipster-sidetip .tooltipster-box {
   background: black;
-  border: 2px solid black;
+  border: 2px solid #918c2d;
   border-radius: 4px; }
 
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-box {
@@ -310,22 +333,22 @@ corresponds to the arrow we want to display */
   border: 10px solid transparent; }
 
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-background {
-  border-bottom-color: #565656;
+  border-bottom-color: black;
   left: 0px;
   top: 3px; }
 
 .tooltipster-sidetip.tooltipster-left .tooltipster-arrow-background {
-  border-left-color: #565656;
+  border-left-color: black;
   left: -3px;
   top: 0px; }
 
 .tooltipster-sidetip.tooltipster-right .tooltipster-arrow-background {
-  border-right-color: #565656;
+  border-right-color: black;
   left: 3px;
   top: 0px; }
 
 .tooltipster-sidetip.tooltipster-top .tooltipster-arrow-background {
-  border-top-color: #565656;
+  border-top-color: black;
   left: 0px;
   top: -3px; }
 
@@ -336,16 +359,16 @@ corresponds to the arrow we want to display */
   top: 0; }
 
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border {
-  border-bottom-color: black; }
+  border-bottom-color: #918c2d; }
 
 .tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border {
-  border-left-color: black; }
+  border-left-color: #918c2d; }
 
 .tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border {
-  border-right-color: black; }
+  border-right-color: #918c2d; }
 
 .tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border {
-  border-top-color: black; }
+  border-top-color: #918c2d; }
 
 /* tooltipster-arrow-uncropped */
 .tooltipster-sidetip .tooltipster-arrow-uncropped {
@@ -538,3 +561,28 @@ h1 {
 
 .title {
   padding: 0 5px; }
+
+details, summary {
+  display: block; }
+
+details.details_shim_closed > * {
+  display: none; }
+
+details.details_shim_closed > summary {
+  display: block; }
+
+details.details_shim_open > summary {
+  display: block; }
+
+details.details_shim_closed > summary:before {
+  display: inline-block;
+  content: "\25b6";
+  padding: 0 0.1em;
+  margin-right: 0.4em;
+  font-size: 0.9em; }
+
+details.details_shim_open > summary:before {
+  display: inline-block;
+  content: "\25bc";
+  padding: 0;
+  margin-right: 0.35em; }
