--- a/css/main.nest.sass.css
+++ b/css/main.nest.sass.css
@@ -15,35 +15,66 @@ ul,
 figure {
   margin: 0; }
 
+a {
+  text-decoration: none;
+  color: yellow; }
+  a:visited {
+    color: #beee32; }
+  a:hover {
+    background-color: #3c3c0a; }
+  a:active {
+    background-color: #3c3c0a; }
+
 h1 {
-  color: #918c2d;
+  color: #96912d;
   font-weight: 300;
   font-style: italic;
   font-size: 24px;
   line-height: 28px;
+  -webkit-align-self: center;
+  -moz-align-self: center;
   align-self: center;
+  -ms-flex-item-align: center;
   padding: 15px 0 15px 45px;
-  border-bottom: 1px solid #918c2d; }
+  border-bottom: 1px solid #96912d; }
 
 h2 {
-  color: #918c2d;
+  color: #96912d;
   font-weight: 300;
   font-size: 20px;
   line-height: 24px;
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
   align-self: flex-end;
+  -ms-flex-item-align: end;
   padding: 15px 20px 12px 45px;
   margin: 0;
-  border-bottom: 1px solid #918c2d; }
+  border-bottom: 1px solid #96912d; }
 
 h3 {
-  color: #918c2d;
+  color: #96912d;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
   align-self: flex-end;
+  -ms-flex-item-align: end;
   padding: 15px 4vw 0 8vw;
   margin: 0;
-  border-bottom: 1px solid #918c2d; }
+  border-bottom: 1px solid #96912d; }
+
+h5 {
+  color: #96912d;
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 18px;
+  padding: 4px 20px;
+  margin: 20px 0 5px 0;
+  -webkit-align-self: center;
+  -moz-align-self: center;
+  align-self: center;
+  -ms-flex-item-align: center; }
 
 figcaption {
   font-size: 0.8rem;
@@ -52,11 +83,8 @@ figcaption {
   text-align: right;
   width: 90%; }
 
-ul {
-  padding: 2vw 2vw 2vw 4vw; }
-
 .byline {
-  border-top: 1px solid #918c2d;
+  border-top: 1px solid #96912d;
   margin-right: 20px;
   letter-spacing: 2px; }
 
@@ -64,12 +92,11 @@ ul {
   font-weight: 600;
   font-size: 0.6rem;
   color: yellow; }
+  .note:hover {
+    background-color: #3c3c0a;
+    cursor: help; }
 
-.note:hover {
-  background-color: #3c3c0a;
-  cursor: help; }
-
-/*This is part of Tooltipster */
+/*This hides Tooltipster tooltips until hovered */
 .tooltip_templates {
   display: none; }
 
@@ -87,8 +114,14 @@ nav {
     text-decoration: none;
     font-weight: 300;
     color: #fac819; }
-  nav a:hover {
-    color: yellow; }
+    nav a:visited {
+      color: #fac819; }
+    nav a:hover {
+      color: yellow;
+      background-color: inherit; }
+    nav a:active {
+      color: yellow;
+      background-color: inherit; }
 
 nav > ul {
   display: -webkit-box;
@@ -127,8 +160,8 @@ nav > ul li {
   font-weight: 300;
   padding: 5px; }
 
-/* Make dropdown menus
-  ul whose parent li is a descendent of nav */
+/* Make dropdown menus:
+  ul that is a CHILD of li which is a DESCENDENT of nav */
 nav li > ul {
   display: none;
   border-radius: 15px;
@@ -232,15 +265,6 @@ header {
   align-items: flex-start;
   -ms-flex-align: start;
   width: 100%; }
-  .container a {
-    color: yellow;
-    text-decoration: none; }
-    .container a:visited {
-      color: #c8ee3c; }
-    .container a:hover {
-      background-color: #3c3c0a; }
-    .container a:active {
-      background-color: #3c3c0a; }
 
 section {
   display: -webkit-box;
@@ -270,6 +294,26 @@ section {
   -ms-flex-direction: column;
   margin-top: 3rem;
   margin-left: 4rem; }
+
+section .learn {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+  -moz-box-flex: 0;
+  box-flex: 0;
+  -webkit-flex: 0 1 350px;
+  -moz-flex: 0 1 350px;
+  -ms-flex: 0 1 350px;
+  flex: 0 1 350px;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 90%; }
 
 aside {
   -webkit-box-flex: 1;
@@ -406,20 +450,6 @@ aside {
   -ms-flex-align: center;
   margin: 0 15px 15px 15px; }
 
-div .gallery {
-  -webkit-box-flex: auto;
-  -moz-box-flex: auto;
-  box-flex: auto;
-  -webkit-flex: auto;
-  -moz-flex: auto;
-  -ms-flex: auto;
-  flex: auto;
-  width: 500px;
-  margin: 20px; }
-  div .gallery img {
-    width: 100%;
-    height: auto; }
-
 .pix {
   margin: 15px;
   -webkit-box-flex: auto;
@@ -442,6 +472,52 @@ div .gallery {
   .pix img {
     width: 100%;
     height: auto; }
+
+div .gallery {
+  -webkit-box-flex: auto;
+  -moz-box-flex: auto;
+  box-flex: auto;
+  -webkit-flex: auto;
+  -moz-flex: auto;
+  -ms-flex: auto;
+  flex: auto;
+  width: 500px;
+  margin: 20px; }
+  div .gallery img {
+    width: 100%;
+    height: auto; }
+
+.imgResize {
+  -webkit-box-flex: auto;
+  -moz-box-flex: auto;
+  box-flex: auto;
+  -webkit-flex: auto;
+  -moz-flex: auto;
+  -ms-flex: auto;
+  flex: auto;
+  -webkit-align-self: center;
+  -moz-align-self: center;
+  align-self: center;
+  -ms-flex-item-align: center; }
+  .imgResize img {
+    width: 90%;
+    height: auto; }
+
+.thumbs {
+  padding: 10px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  flex-flow: row wrap; }
+  .thumbs img {
+    padding: 10px;
+    flex: 0 1 auto; }
 
 .sideDiv {
   background-color: rgba(0, 0, 0, 0.7);
@@ -485,35 +561,66 @@ ul,
 figure {
   margin: 0; }
 
+a {
+  text-decoration: none;
+  color: yellow; }
+  a:visited {
+    color: #beee32; }
+  a:hover {
+    background-color: #3c3c0a; }
+  a:active {
+    background-color: #3c3c0a; }
+
 h1 {
-  color: #918c2d;
+  color: #96912d;
   font-weight: 300;
   font-style: italic;
   font-size: 24px;
   line-height: 28px;
+  -webkit-align-self: center;
+  -moz-align-self: center;
   align-self: center;
+  -ms-flex-item-align: center;
   padding: 15px 0 15px 45px;
-  border-bottom: 1px solid #918c2d; }
+  border-bottom: 1px solid #96912d; }
 
 h2 {
-  color: #918c2d;
+  color: #96912d;
   font-weight: 300;
   font-size: 20px;
   line-height: 24px;
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
   align-self: flex-end;
+  -ms-flex-item-align: end;
   padding: 15px 20px 12px 45px;
   margin: 0;
-  border-bottom: 1px solid #918c2d; }
+  border-bottom: 1px solid #96912d; }
 
 h3 {
-  color: #918c2d;
+  color: #96912d;
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
   align-self: flex-end;
+  -ms-flex-item-align: end;
   padding: 15px 4vw 0 8vw;
   margin: 0;
-  border-bottom: 1px solid #918c2d; }
+  border-bottom: 1px solid #96912d; }
+
+h5 {
+  color: #96912d;
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 18px;
+  padding: 4px 20px;
+  margin: 20px 0 5px 0;
+  -webkit-align-self: center;
+  -moz-align-self: center;
+  align-self: center;
+  -ms-flex-item-align: center; }
 
 figcaption {
   font-size: 0.8rem;
@@ -522,11 +629,8 @@ figcaption {
   text-align: right;
   width: 90%; }
 
-ul {
-  padding: 2vw 2vw 2vw 4vw; }
-
 .byline {
-  border-top: 1px solid #918c2d;
+  border-top: 1px solid #96912d;
   margin-right: 20px;
   letter-spacing: 2px; }
 
@@ -534,12 +638,11 @@ ul {
   font-weight: 600;
   font-size: 0.6rem;
   color: yellow; }
+  .note:hover {
+    background-color: #3c3c0a;
+    cursor: help; }
 
-.note:hover {
-  background-color: #3c3c0a;
-  cursor: help; }
-
-/*This is part of Tooltipster */
+/*This hides Tooltipster tooltips until hovered */
 .tooltip_templates {
   display: none; }
 
@@ -714,7 +817,7 @@ ul {
 
 .tooltipster-sidetip .tooltipster-box {
   background: black;
-  border: 2px solid #918c2d;
+  border: 2px solid #96912d;
   border-radius: 4px; }
 
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-box {
@@ -798,16 +901,16 @@ ul {
   top: 0; }
 
 .tooltipster-sidetip.tooltipster-bottom .tooltipster-arrow-border {
-  border-bottom-color: #918c2d; }
+  border-bottom-color: #96912d; }
 
 .tooltipster-sidetip.tooltipster-left .tooltipster-arrow-border {
-  border-left-color: #918c2d; }
+  border-left-color: #96912d; }
 
 .tooltipster-sidetip.tooltipster-right .tooltipster-arrow-border {
-  border-right-color: #918c2d; }
+  border-right-color: #96912d; }
 
 .tooltipster-sidetip.tooltipster-top .tooltipster-arrow-border {
-  border-top-color: #918c2d; }
+  border-top-color: #96912d; }
 
 .tooltipster-sidetip .tooltipster-arrow-uncropped {
   position: relative; }
@@ -868,3 +971,48 @@ th {
 
 tr:nth-child(2n) {
   background: rgba(50, 50, 0, 0.6); }
+
+ul.tabs {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+  -moz-box-align: center;
+  box-align: center;
+  -webkit-align-items: center;
+  -moz-align-items: center;
+  -ms-align-items: center;
+  -o-align-items: center;
+  align-items: center;
+  -ms-flex-align: center;
+  -webkit-box-pack: start;
+  -moz-box-pack: start;
+  box-pack: start;
+  -webkit-justify-content: flex-start;
+  -moz-justify-content: flex-start;
+  -ms-justify-content: flex-start;
+  -o-justify-content: flex-start;
+  justify-content: flex-start;
+  -ms-flex-pack: start;
+  -webkit-flex-flow: row nowrap;
+  -moz-flex-flow: row nowrap;
+  flex-flow: row nowrap;
+  margin: 1rem 0 0 0;
+  list-style-type: none;
+  height: 2rem;
+  color: #fac819;
+  font-size: 1.1rem;
+  font-weight: 300; }
+
+.tabs li {
+  padding: 0.5rem 1.2rem 0.5rem 1.2rem;
+  background-color: rgba(10, 10, 10, 0.6);
+  border-radius: 1.2rem 1.2rem 0 0;
+  margin: 0.3rem 0.3rem 0.5rem 0.3rem; }
+
+.under-tabs {
+  margin-top: 0; }
