--- a/sass/_tabs.sass
+++ b/sass/_tabs.sass
@@ -1,9 +1,20 @@
-ul .tabs
-  list-style-type: none
+ul.tabs
   +display(flex)
   +align-items(center)
   +justify-content(flex-start)
   +flex-flow(row nowrap)
-  margin-left: 2rem
-  height: 3rem
+  margin: 1rem 0 0 0
+  list-style-type: none
+  height: 2rem
+  color: $navAnchor
+  font-size: 1.1rem
+  font-weight: 300
+
+.tabs li
+  padding: 0.5rem 1.2rem 0.5rem 1.2rem
   background-color: $innerBkgd
+  border-radius: 1.2rem 1.2rem 0 0
+  margin: 0.3rem 0.3rem 0.5rem 0.3rem
+
+.under-tabs
+  margin-top: 0
