--- a/sass/_style-vars.sass
+++ b/sass/_style-vars.sass
@@ -1,6 +1,6 @@
 $outerBkgd: rgba(50, 50, 0, 0.6)
 $innerBkgd: rgba(10, 10, 10, 0.6)
-$noteBkgd: rgba(0, 0, 0, 0.3)
+$tabBkgd: rgba(15, 10, 0, 0.4)
 $sideBkgd: rgba(0, 0, 0, 0.7)
 $outRadius: 2rem
 $inRadius: 1.5rem
