--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,4 +1,4 @@
-!<!DOCTYPE html>
+<!DOCTYPE html>
 <html lang="en-us">
  <head>
   <meta charset="utf-8">
@@ -10,5 +10,6 @@
   </style>
  </head>
  <body>
- Blog section set up
+{{content}}
  </body>
+</html>
