--- a/sass/_blocks-objects.sass
+++ b/sass/_blocks-objects.sass
@@ -47,7 +47,7 @@ aside
   +align-items(flex-end)
   margin: 15px
   p
-    width: calc(100% - 3rem)
+    padding: 0.5rem 1.2rem
     +align-self(center)
 
 .pixWrap
