--- a/sass/_style-vars.sass
+++ b/sass/_style-vars.sass
@@ -1,6 +1,6 @@
-$outerBkgd: rgba(50, 50, 0, 0.6)
-$innerBkgd: rgba(10, 10, 10, 0.6)
-$tabBkgd: rgba(15, 10, 0, 0.4)
+$outerBkgd: rgba(50, 50, 0, 0.7)
+$innerBkgd: rgba(10, 10, 10, 0.7)
+$tabBkgd: rgba(0, 0, 0, 0.4)
 $sideBkgd: rgba(0, 0, 0, 0.7)
 $outRadius: 2rem
 $inRadius: 1.5rem
@@ -13,6 +13,6 @@ $lightAccent: rgb(115, 115, 15)
 $darkAccent: rgb(80, 80, 15)
 $introRadius: 0 1.5rem 1.5rem 0
 $figcapSize: 0.8rem
-$link: yellow
+$linx: yellow
 $aVisited: rgb(190,238,50)
 $aHoverBk: rgb(60,60,10)
