--- a/sass/_text-styles.sass
+++ b/sass/_text-styles.sass
@@ -10,14 +10,12 @@ html
   @media only screen and (min-width:1350px)
     background-size: 100% auto
 
-body,
-ul,
-figure
+body, ul, figure
   margin: 0
 
 a
   text-decoration: none
-  color: $link
+  color: $linx
   &:visited
     color: $aVisited
   &:hover
@@ -34,6 +32,7 @@ h1
   line-height: 28px
   +align-self(center)
   padding: 15px 0 15px 45px
+  margin: 0
   border-bottom: 1px solid $headingColor
 
 h2
