hating this right now
Former-commit-id: 56334d88471589fe617932466e584973be70fbb8 [formerly 98dfaad950de9e58e2aa5cac66d3f295ebcaae15]
Former-commit-id: c9b58cd89cfd3ef5cdd124b46aa3c738718a2b32

--- a/sass/_tabs.sass
+++ b/sass/_tabs.sass
@@ -19,7 +19,7 @@ ul.tabs
   &:hover
     background-color: black
     color: $navAHover
-  &:focus, .active
+  &:focus, &.active
     background-color: $innerBkgd
     color: $navAnchor
 
