--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -4,14 +4,14 @@
 	<head>
 		<title>{{page.title}}</title>
 		<meta charset="utf-8">
-		<meta http-equiv="x-ua-compatible" content="ie=edge">
+		<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
 		<meta name="theme-color" content="#ffffff">
-		<meta name="description" content={{page.description}}>
+		<meta name="description" content="{{site.description}}">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
-		<link rel="stylesheet" href={{page.stylesheet}}>
+		<link rel="stylesheet" href="{{page.stylesheet}}">
 <link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
 <script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
