--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,15 +1,43 @@
-<!DOCTYPE html>
-<html lang="en-us">
- <head>
-  <meta charset="utf-8">
-  <style>
-  .container {
-   background-color: #666;
-   color: rgb(247,247,220);
-  }
-  </style>
- </head>
- <body>
+
+<!doctype html>
+<html lang="en-US">
+	<head>
+		<title>{{page.title}}</title>
+		<meta charset="utf-8">
+		<meta http-equiv="x-ua-compatible" content="IE=edge, chrome=1">
+		<meta name="theme-color" content="#ffffff">
+		<meta name="description" content="{{site.description}}">
+		<meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
+		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
+		<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16">
+		<link rel="stylesheet" href="css/posts.nest.sass.css">
+<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
+<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+<script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+<script>
+	 $(document).ready(function() {
+			 $('.tooltip').tooltipster({
+				interactive: true
+			});
+	 });
+</script>
+	</head>
+<body>
+{%include obsolete-warning.html %}
+{%include nav.html%}
+	<header>
+		<div id="header">
+   <p>
+     What could be done if a group of nations was determined to
+     colonize the Moon, and they based their decisions only on
+     technical and economic merit?
+   </p>
+		</div>
+	</header>
+<div class="container">
+ <h1>{{page.title}}</h1>
 {{content}}
- </body>
+</div>
+</body>
 </html>
