--- a/docs/css/main.nest.sass.css
+++ b/docs/css/main.nest.sass.css
@@ -1,4 +1,3 @@
-/*All color, text styling, visual touches, and basic doc styles*/
 html {
   margin: 0;
   color: #f7f7dc;
@@ -10,6 +9,7 @@ html {
     html {
       background-size: 100% auto; } }
 
+/*All color, text styling, visual touches, and basic doc styles*/
 body, ul, figure {
   margin: 0; }
 
@@ -273,7 +273,6 @@ section {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  padding: 1rem;
   -webkit-box-flex: 3;
   -moz-box-flex: 3;
   box-flex: 3;
@@ -291,6 +290,7 @@ section {
   -moz-flex-direction: column;
   flex-direction: column;
   -ms-flex-direction: column;
+  padding: 1rem;
   margin-top: 3rem;
   margin-left: 4rem; }
 
@@ -322,7 +322,6 @@ aside {
   -moz-flex: 1 1 300px;
   -ms-flex: 1 1 300px;
   flex: 1 1 300px;
-  margin-top: 4rem;
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -350,20 +349,20 @@ aside {
   -ms-align-items: stretch;
   -o-align-items: stretch;
   align-items: stretch;
-  -ms-flex-align: stretch; }
+  -ms-flex-align: stretch;
+  margin-top: 4rem; }
   @media only screen and (min-width: 1700px) {
     aside {
       flex: 2 0 400px; } }
 
 .outerDiv {
-  background-color: rgba(50, 50, 0, 0.7);
   -moz-border-radius: 2rem;
   -webkit-border-radius: 2rem;
   -ms-border-radius: 2rem;
-  border-radius: 2rem; }
+  border-radius: 2rem;
+  background-color: rgba(50, 50, 0, 0.7); }
 
 .innerDiv {
-  background-color: rgba(10, 10, 10, 0.7);
   -moz-border-radius: 1.5rem;
   -webkit-border-radius: 1.5rem;
   -ms-border-radius: 1.5rem;
@@ -387,6 +386,7 @@ aside {
   -o-align-items: flex-end;
   align-items: flex-end;
   -ms-flex-align: end;
+  background-color: rgba(10, 10, 10, 0.7);
   margin: 15px; }
   .innerDiv p {
     padding: 0.5rem 1.2rem;
@@ -915,7 +915,7 @@ ul.tabs {
   .tabs li a:hover {
     background-color: black;
     color: yellow; }
-  .tabs li a:focus, .tabs li a .active {
+  .tabs li a:focus, .tabs li a.active {
     background-color: rgba(10, 10, 10, 0.7);
     color: #fac819; }
 
