--- a/docs/css/posts.nest.sass.css
+++ b/docs/css/posts.nest.sass.css
@@ -200,35 +200,6 @@ nav li:hover > ul {
   -moz-flex-flow: column nowrap;
   flex-flow: column nowrap; }
 
-header {
-  width: 100%;
-  display: flex;
-  flex-flow: row-reverse wrap;
-  justify-content: space-around;
-  align-items: center;
-  padding: 65px 0; }
-
-#Logo {
-  flex: 0 0 40%; }
-  @media only screen and (min-width: 1350px) {
-    #Logo {
-      flex: 0 0 25%; } }
-
-#note {
-  flex: 0 0 40%;
-  font-style: italic;
-  font-weight: 300;
-  font-size: 20px;
-  color: #967832;
-  background: rgba(0, 0, 0, 0.7);
-  border-radius: 50px;
-  border: 8px solid black;
-  padding: 12px;
-  text-align: right; }
-  #note p {
-    width: 50;
-    margin-left: auto; }
-
 /*Block level elements, and non-text objects */
 .container {
   display: -webkit-box;
@@ -870,57 +841,6 @@ th {
 tr:nth-child(2n) {
   background: rgba(50, 50, 0, 0.7); }
 
-ul.tabs {
-  display: -webkit-box;
-  display: -moz-box;
-  display: box;
-  display: -webkit-flex;
-  display: -moz-flex;
-  display: -ms-flexbox;
-  display: flex;
-  -webkit-box-align: center;
-  -moz-box-align: center;
-  box-align: center;
-  -webkit-align-items: center;
-  -moz-align-items: center;
-  -ms-align-items: center;
-  -o-align-items: center;
-  align-items: center;
-  -ms-flex-align: center;
-  -webkit-box-pack: start;
-  -moz-box-pack: start;
-  box-pack: start;
-  -webkit-justify-content: flex-start;
-  -moz-justify-content: flex-start;
-  -ms-justify-content: flex-start;
-  -o-justify-content: flex-start;
-  justify-content: flex-start;
-  -ms-flex-pack: start;
-  -webkit-flex-flow: row nowrap;
-  -moz-flex-flow: row nowrap;
-  flex-flow: row nowrap;
-  margin: 1rem 0 0.3rem 0;
-  list-style-type: none;
-  height: 2rem;
-  font-size: 1.1rem;
-  font-weight: 400; }
-
-.tabs li a {
-  padding: 0.5rem 1.2rem 0.5rem 1.2rem;
-  background-color: rgba(0, 0, 0, 0.4);
-  color: #96912d;
-  border-radius: 1.2rem 1.2rem 0 0;
-  margin: 0.3rem 0.3rem 0.5rem 0.3rem;
-  letter-spacing: 2px; }
-  .tabs li a:hover {
-    background-color: black;
-    color: yellow; }
-  .tabs li a:focus, .tabs li a.active {
-    background-color: rgba(10, 10, 10, 0.7);
-    color: #fac819; }
-
-.under-tabs {
-  margin-top: 0; }
-
-.tabcontent {
-  display: none; }
+#header {
+  background: #000 url("img/BlogHeaderOpt.svg") no-repeat fixed center;
+  background-size: contain; }
