--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -26,14 +26,14 @@
 <body>
 {%include obsolete-warning.html %}
 {%include nav.html%}
-<div class="container">
 	<header>
    <p>
-     What could be done if a group of nations was determined to
+     What if a group of nations was determined to
      colonize the Moon, and they based their decisions only on
      technical and economic merit?
    </p>
 	</header>
+<div class="container">
  <h1>{{page.title}}</h1>
 {{content}}
 </div>
