rss feed now converts files in the _rss folder
Former-commit-id: ef92322b4fb6b606ad9d77350ca33663b1592deb [formerly 60aafbeced423c405ef87f43ae390ef30a24fcb6]
Former-commit-id: 3022da1d023bd5d126117e6d05d8f51b1db17765

--- a/_includes/colonyModelsLalande.html
+++ b/_includes/colonyModelsLalande.html
@@ -1,4 +1,4 @@
-	<div class="container_SF_iframe">
+	<div class="container_SF_iframe" id="3dLalande">
 		<div class="SF-Div">
 			<h2>Interactive 3d models</h2>
 			Click the play arrow to load the 3d models
