--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@
 	</head>
 <body>
 {%include obsolete-warning.html %}
-{%include nav.html%}
+{%include postnav.html%}
 	<header>
    <p>
      What if a group of nations was determined to
