--- a/sass/_post-styles.sass
+++ b/sass/_post-styles.sass
@@ -1,3 +1,8 @@
+html
+  margin: 0
+  color: rgb(247,247,220)
+  font: 1rem/1.5rem 'Titillium Web', sans-serif
+
 body, ul, figure
   margin: 0
 
@@ -7,7 +12,6 @@ header
   background-image: url("http://www.moonwards.com/img/BlogHeaderOpt.svg")
   border-top: 1px solid $aHoverBk
   border-bottom: 1px solid $aHoverBk
-  margin-top: 33px
   width: 100%
   p
     box-sizing: border-box
@@ -24,10 +28,9 @@ header
     padding: 1rem 2rem
 
 .container
-  margin-left: 10%
+  margin-left: 4%
   margin-top: 2rem
-  width: 70%
-  max-width: 1000px
+  width: 90%
   background-color: rgba(0,0,0,0.7)
   p
     padding: 15px
@@ -38,6 +41,13 @@ header
     margin: auto
     img
       width: 100%
+    figcaption
+      font-size: 0.8rem
+      letter-spacing: 1px
+      line-height: 1.1rem
+      text-align: right
+      width: 90%
+      background: $outerBkgd
 a
   text-decoration: none
   color: $linx
@@ -84,15 +94,6 @@ h5
   font-size: 18px
   padding: 4px 20px
   margin: 20px 0 5px 0
-
-
-figcaption
-  font-size: 0.8rem
-  letter-spacing: 1px
-  line-height: 1.1rem
-  text-align: right
-  width: 90%
-
 
 .byline
   border-top: 1px solid $headingColor
