--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -1,7 +1,20 @@
 <aside>
-	<div class="sideDiv" id="RSS-feed">
-If you can't see our RSS feed, you need to enable Javascript
-		</div>
+	<div class="sideDiv">
+		<div id="RSS-feed">
+		If you can't see our RSS feed, you need to enable Javascript
+ </div>
+ 		<a href="https://www.moonwards.com/feed/rss.xml">
+			<svg xmlns="http://www.w3.org/2000/svg"
+			     id="RSSicon"
+			     viewbox="0 0 8 8" width="32" height="32" title="RSS feed">
+			  <style type="text/css">
+			    .symbol {stroke: none; fill: yellow;}
+			  </style>
+			  <circle class="symbol" cx="2" cy="6" r="1" />
+			  <path   class="symbol" d="m 1,4 a 3,3 0 0 1 3,3 h 1 a 4,4 0 0 0 -4,-4 z" />
+			  <path   class="symbol" d="m 1,2 a 5,5 0 0 1 5,5 h 1 a 6,6 0 0 0 -6,-6 z" />
+			</svg></a>
+</div>
 		<div class="sideDiv">
 			<div class="framewrap frame16x9">
 			 		<iframe src="https://www.youtube.com/embed/vF--hweQ1Ec"
@@ -9,7 +22,7 @@ If you can't see our RSS feed, you need to enable Javascript
 			</div>
 		</div>
 </aside>
-</div>
+
 <!--add an array so that a series of youtube or vimeo videos can be added over time and easily changed.
 Maybe that needs a loop-through setup. Check out Front matter, Includes,
 and Looping vids on Jekyll Tips--!>
