blog section working, post formatting
Former-commit-id: 922ae595c122e3f466b8afb4ec87798b54f8f85b

--- a/_includes/asideMain.html
+++ b/_includes/asideMain.html
@@ -1,7 +1,7 @@
 <aside>
 	<div class="sideDiv">
 		<div id="RSS-feed">
-		If you can't see our RSS feed, you need to enable Javascript
+		If you can't see our RSS feed, it's because Javascript is disabled.
  </div>
  		<a href="https://www.moonwards.com/feed/rss.xml">
 			<svg xmlns="http://www.w3.org/2000/svg"
@@ -25,4 +25,4 @@
 
 <!--add an array so that a series of youtube or vimeo videos can be added over time and easily changed.
 Maybe that needs a loop-through setup. Check out Front matter, Includes,
-and Looping vids on Jekyll Tips--!>
+and Looping vids on Jekyll Tips-->
