--- a/sass/_iframes.sass
+++ b/sass/_iframes.sass
@@ -25,3 +25,16 @@
 
 .frame4x3
   padding-bottom: 75%
+
+.goodHeight
+  @media (min-height: 1000px)
+    height: 950px
+  @media (min-height: 900px)
+    height: 850px
+  @media (min-height: 800px)
+    height: 750px
+  @media (min-height: 700px)
+    height: 650px
+
+iframe::-webkit-scrollbar-track
+  background-color: black
