blog post formatting, addition of blog images
Former-commit-id: e083b679cfeb99a44a0c1ffe21a1b4247d4cdc3c

--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -25,7 +25,7 @@
 				<li><a href="project.html">Project</a>
 					<ul>
 						<li><a href="project.html#chart">Chart</a></li>
-						<li><a href="http://moonwards1.blogspot.com/">Blogger</a></li>
+						<li><a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a></li>
 						<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
 					</ul>
 				</li>
