--- a/_includes/colonyModelsLalande.html
+++ b/_includes/colonyModelsLalande.html
@@ -11,10 +11,11 @@
 			more frequent and dramatic with time. Right now they are at a pretty early
 			stage.
 		</div>
-  <section class="framewrap frame16x9">
+  <figure class="framewrap frame16x9">
 						<iframe src="modelProxy10.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
-		</section>
+	     <!--<figcaption>i probably already tried this...This model shows many years of development. How many? Hard to say, that would depend on advancements in robotics more than anything else - since	we are taking the money for granted.</figcaption>-->
+		</figure>
   <section class="framewrap frame16x9">
 						<iframe src="modelProxy11.html" frameborder="0" allowfullscreen="" mozallowfullscreen="true" webkitallowfullscreen="true" onmousewheel="">
 						</iframe>
