--- a/css/content.nest.sass.css
+++ b/css/content.nest.sass.css
@@ -1,18 +1,6 @@
-/*All color, text styling, visual touches, and basic doc styles*/
-html {
-  margin: 0;
-  color: #f7f7dc;
-  font: 1rem/1.5rem 'Titillium Web', sans-serif;
-  background: #000 url(http://www.moonwards.com/img/tycho-mod.png) no-repeat fixed right 250px;
-  padding: 0;
-  background-size: 1600px; }
-  @media only screen and (min-width: 1350px) {
-    html {
-      background-size: 100% auto; } }
-
-body,
-ul,
-figure {
+@charset "UTF-8";
+/*All color, text styling, visual touches, and basic doc styles */
+body, ul, figure {
   margin: 0; }
 
 a {
@@ -31,8 +19,12 @@ h1 {
   font-style: italic;
   font-size: 24px;
   line-height: 28px;
+  -webkit-align-self: center;
+  -moz-align-self: center;
   align-self: center;
+  -ms-flex-item-align: center;
   padding: 15px 0 15px 45px;
+  margin: 0;
   border-bottom: 1px solid #96912d; }
 
 h2 {
@@ -40,7 +32,10 @@ h2 {
   font-weight: 300;
   font-size: 20px;
   line-height: 24px;
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
   align-self: flex-end;
+  -ms-flex-item-align: end;
   padding: 15px 20px 12px 45px;
   margin: 0;
   border-bottom: 1px solid #96912d; }
@@ -50,10 +45,25 @@ h3 {
   font-weight: 400;
   font-size: 18px;
   line-height: 24px;
+  -webkit-align-self: flex-end;
+  -moz-align-self: flex-end;
   align-self: flex-end;
+  -ms-flex-item-align: end;
   padding: 15px 4vw 0 8vw;
   margin: 0;
   border-bottom: 1px solid #96912d; }
+
+h5 {
+  color: #96912d;
+  font-weight: 400;
+  line-height: 20px;
+  font-size: 18px;
+  padding: 4px 20px;
+  margin: 20px 0 5px 0;
+  -webkit-align-self: center;
+  -moz-align-self: center;
+  align-self: center;
+  -ms-flex-item-align: center; }
 
 figcaption {
   font-size: 0.8rem;
@@ -61,9 +71,6 @@ figcaption {
   line-height: 1.1rem;
   text-align: right;
   width: 90%; }
-
-ul {
-  padding: 2vw 2vw 2vw 4vw; }
 
 .byline {
   border-top: 1px solid #96912d;
@@ -143,7 +150,7 @@ nav > ul li {
   padding: 5px; }
 
 /* Make dropdown menus:
-  ul that is a CHILD of li which is a DESCENDENT of nav */
+ * ul that is a CHILD of li which is a DESCENDENT of nav */
 nav li > ul {
   display: none;
   border-radius: 15px;
@@ -152,7 +159,7 @@ nav li > ul {
   padding: 10px; }
 
 /* Statement applies only to
-  child ul, only when li is hovered */
+ * child ul, only when li is hovered */
 nav li:hover > ul {
   display: -webkit-box;
   display: -moz-box;
@@ -240,7 +247,7 @@ header {
   font-size: 1rem;
   line-height: 1.6rem;
   text-align: right;
-  background: rgba(50, 50, 0, 0.6);
+  background: rgba(50, 50, 0, 0.7);
   border-radius: 0 1.5rem 1.5rem 0;
   padding: 2rem 3rem 2rem 2rem;
   margin-left: auto; }
@@ -289,7 +296,6 @@ section {
   display: -moz-flex;
   display: -ms-flexbox;
   display: flex;
-  padding: 1rem;
   -webkit-box-flex: 3;
   -moz-box-flex: 3;
   box-flex: 3;
@@ -307,8 +313,29 @@ section {
   -moz-flex-direction: column;
   flex-direction: column;
   -ms-flex-direction: column;
+  padding: 1rem;
   margin-top: 3rem;
-  margin-left: 4rem; }
+  margin-left: 2rem; }
+
+section .learn {
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-flex: 0;
+  -moz-box-flex: 0;
+  box-flex: 0;
+  -webkit-flex: 0 1 350px;
+  -moz-flex: 0 1 350px;
+  -ms-flex: 0 1 350px;
+  flex: 0 1 350px;
+  flex-flow: row wrap;
+  justify-content: flex-start;
+  align-items: flex-start;
+  width: 90%; }
 
 aside {
   -webkit-box-flex: 1;
@@ -318,7 +345,6 @@ aside {
   -moz-flex: 1 1 300px;
   -ms-flex: 1 1 300px;
   flex: 1 1 300px;
-  margin-top: 4rem;
   display: -webkit-box;
   display: -moz-box;
   display: box;
@@ -346,20 +372,20 @@ aside {
   -ms-align-items: stretch;
   -o-align-items: stretch;
   align-items: stretch;
-  -ms-flex-align: stretch; }
+  -ms-flex-align: stretch;
+  margin-top: 4rem; }
   @media only screen and (min-width: 1700px) {
     aside {
       flex: 2 0 400px; } }
 
 .outerDiv {
-  background-color: rgba(50, 50, 0, 0.6);
   -moz-border-radius: 2rem;
   -webkit-border-radius: 2rem;
   -ms-border-radius: 2rem;
-  border-radius: 2rem; }
+  border-radius: 2rem;
+  background-color: rgba(50, 50, 0, 0.7); }
 
 .innerDiv {
-  background-color: rgba(10, 10, 10, 0.6);
   -moz-border-radius: 1.5rem;
   -webkit-border-radius: 1.5rem;
   -ms-border-radius: 1.5rem;
@@ -383,9 +409,11 @@ aside {
   -o-align-items: flex-end;
   align-items: flex-end;
   -ms-flex-align: end;
+  background-color: rgba(10, 10, 10, 0.7);
   margin: 15px; }
   .innerDiv p {
-    width: calc(100% - 3rem);
+    padding: 0.5rem 1.2rem;
+    margin: 0;
     -webkit-align-self: center;
     -moz-align-self: center;
     align-self: center;
@@ -417,12 +445,12 @@ aside {
     padding: 10px; }
 
 .pixHeader {
-  background-color: rgba(10, 10, 10, 0.6);
+  background-color: rgba(10, 10, 10, 0.7);
   border-radius: 15px 15px 0 0;
   margin: 15px 15px 0 15px; }
 
 .pixBody {
-  background-color: rgba(10, 10, 10, 0.6);
+  background-color: rgba(10, 10, 10, 0.7);
   border-radius: 0 0 15px 15px;
   display: -webkit-box;
   display: -moz-box;
@@ -444,20 +472,6 @@ aside {
   align-items: center;
   -ms-flex-align: center;
   margin: 0 15px 15px 15px; }
-
-div .gallery {
-  -webkit-box-flex: auto;
-  -moz-box-flex: auto;
-  box-flex: auto;
-  -webkit-flex: auto;
-  -moz-flex: auto;
-  -ms-flex: auto;
-  flex: auto;
-  width: 500px;
-  margin: 20px; }
-  div .gallery img {
-    width: 100%;
-    height: auto; }
 
 .pix {
   margin: 15px;
@@ -481,6 +495,52 @@ div .gallery {
   .pix img {
     width: 100%;
     height: auto; }
+
+div .gallery {
+  -webkit-box-flex: auto;
+  -moz-box-flex: auto;
+  box-flex: auto;
+  -webkit-flex: auto;
+  -moz-flex: auto;
+  -ms-flex: auto;
+  flex: auto;
+  width: 500px;
+  margin: 20px; }
+  div .gallery img {
+    width: 100%;
+    height: auto; }
+
+.imgResize {
+  -webkit-box-flex: auto;
+  -moz-box-flex: auto;
+  box-flex: auto;
+  -webkit-flex: auto;
+  -moz-flex: auto;
+  -ms-flex: auto;
+  flex: auto;
+  -webkit-align-self: center;
+  -moz-align-self: center;
+  align-self: center;
+  -ms-flex-item-align: center; }
+  .imgResize img {
+    width: 90%;
+    height: auto; }
+
+.thumbs {
+  padding: 10px;
+  display: -webkit-box;
+  display: -moz-box;
+  display: box;
+  display: -webkit-flex;
+  display: -moz-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-flex-flow: row wrap;
+  -moz-flex-flow: row wrap;
+  flex-flow: row wrap; }
+  .thumbs img {
+    padding: 10px;
+    flex: 0 1 auto; }
 
 .sideDiv {
   background-color: rgba(0, 0, 0, 0.7);
@@ -652,7 +712,6 @@ div .gallery {
     opacity: 0; }
   100% {
     opacity: 1; } }
-
 .tooltipster-update-fade {
   animation: tooltipster-fading 200ms; }
 
@@ -663,7 +722,6 @@ div .gallery {
     transform: rotate(2deg); }
   100% {
     transform: rotate(0); } }
-
 .tooltipster-update-rotate {
   animation: tooltipster-rotating 600ms; }
 
@@ -672,7 +730,6 @@ div .gallery {
     transform: scale(1.1); }
   100% {
     transform: scale(1); } }
-
 .tooltipster-update-scale {
   animation: tooltipster-scaling 600ms; }
 
@@ -798,14 +855,14 @@ details.details_shim_open > summary {
 
 details.details_shim_closed > summary:before {
   display: inline-block;
-  content: "\25b6";
+  content: "▶";
   padding: 0 0.1em;
   margin-right: 0.4em;
   font-size: 0.9em; }
 
 details.details_shim_open > summary:before {
   display: inline-block;
-  content: "\25bc";
+  content: "▼";
   padding: 0;
   margin-right: 0.35em; }
 
@@ -827,11 +884,11 @@ th, td {
   border: 1px solid #50500f; }
 
 th {
-  background: rgba(50, 50, 0, 0.6);
+  background: rgba(50, 50, 0, 0.7);
   letter-spacing: 1px; }
 
 tr:nth-child(2n) {
-  background: rgba(50, 50, 0, 0.6); }
+  background: rgba(50, 50, 0, 0.7); }
 
 .container_SF_iframe {
   width: 100%; }
@@ -861,3 +918,26 @@ tr:nth-child(2n) {
 
 .frame4x3 {
   padding-bottom: 75%; }
+
+@media (min-height: 1000px) {
+  .goodHeight {
+    height: 950px; } }
+@media (min-height: 900px) {
+  .goodHeight {
+    height: 850px; } }
+@media (min-height: 800px) {
+  .goodHeight {
+    height: 750px; } }
+@media (min-height: 700px) {
+  .goodHeight {
+    height: 650px; } }
+
+input, button {
+  padding: 5px;
+  margin-right: 1rem; }
+
+input[type="text"] {
+  margin-bottom: 0;
+  padding-bottom: 0; }
+
+/*# sourceMappingURL=content.nest.sass.css.map */
