--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,5 +1,5 @@
 
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en-US">
 	<head>
 		<title>{{page.title}}</title>
@@ -12,18 +12,18 @@
 		<link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32">
 		<link rel="icon" type="image/png" href="favicon-96x96.png" sizes="96x96">
 		<link rel="icon" type="image/svg+xml" href="img/FaviconMoonwards.svg"><!--svg icon in Firefox, ignored in other browsers-->
-  <link rel="alternate" type="application/rss+xml" title="Moonwards News" href="/feed/rss.xml">
+		<link rel="alternate" type="application/rss+xml" title="Moonwards News" href="/feed/rss.xml">
 		<link rel="stylesheet" href="{{page.stylesheet}}">
-<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
-<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
-<script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
-<script>
-	 $(document).ready(function() {
-			 $('.tooltip').tooltipster({
-				interactive: true
-			});
-	 });
-</script>
+		<link href="https://fonts.googleapis.com/css?family=Titillium+Web:200,200i,300,300i,400,400i,600" rel="stylesheet">
+		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.1.1/jquery.min.js"></script>
+		<script type="text/javascript" src="js/tooltipster.bundle.min.js"></script>
+		<script>
+$(document).ready(function() {
+	 $('.tooltip').tooltipster({
+		interactive: true
+	});
+});
+		</script>
 	</head>
 <body>
 {%include obsolete-warning.html %}
