sorta working navbar except colours
Former-commit-id: 3f6426905a0a5515505178fee1095ac01c9fc710

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ $(document).ready(function() {
 	</head>
 <body>
 {%include obsolete-warning.html %}
-{%include nav.html%}
+{%include signav.html%}
 {{content}}
 </body>
 </html>
