--- a/sass/main.sass
+++ b/sass/main.sass
@@ -2,7 +2,7 @@
 @import '_style-vars.sass'
 @import '_html-styles.sass'
 @import '_text-styles.sass'
-@import '_nav.sass'
+@import '_signav.sass'
 @import '_mainHeader.sass'
 @import '_blocks-objects.sass'
 @import '_iframes.sass'
