--- a/_includes/nav.html
+++ b/_includes/nav.html
@@ -1,39 +1,44 @@
 	<nav>
 		<ul>
-			<li><a href="index.html">Mission</a>
-				<ul class="dropdown">
-					<li><a href="timeline.html">Timeline</a></li>
-					<li><a href="index.html#sitemap">Site Map</a></li>
-				</ul>
+			<li class="dropdown">
+				<a href="index.html">Mission</a>
+					<div class="dropdown-content">
+						<a href="timeline.html">Timeline</a>
+						<a href="index.html#sitemap">Site Map</a>
+					</div>
 			</li>
-			<li><a href="colonies.html">Colonies</a>
-				<ul class="dropdown">
-					<li><a href="colonies.html#lalande">Lalande</a></li>
-					<li><a href="colonies.html#peary">Peary</a></li>
-					<li><a href="colonies.html#orbital">Orbital</a></li>
-				</ul>
+			<li class="dropdown">
+				<a href="colonies.html">Colonies</a>
+					<div class="dropdown-content">
+						<a href="colonies.html#lalande">Lalande</a>
+						<a href="colonies.html#peary">Peary</a>
+						<a href="colonies.html#orbital">Orbital</a>
+					</div>
 			</li>
-			<li><a href="machines.html">Machines</a>
-				<ul>
-					<li><a href="machines.html#robots">Robots</a></li>
-					<li><a href="machines.html#construction">Construction</a></li>
-					<li><a href="machines2.html#power">Power</a></li>
-					<li><a href="machines2.html#extraction">Extraction</a></li>
-					<li><a href="machines2.html#transport">Transport</a></li>
-				</ul>
+			<li class="dropdown">
+				<a href="machines.html">Machines</a>
+					<div class="dropdown-content">
+						<a href="machines.html#robots">Robots</a>
+						<a href="machines.html#construction">Construction</a>
+						<a href="machines2.html#power">Power</a>
+						<a href="machines2.html#extraction">Extraction</a>
+						<a href="machines2.html#transport">Transport</a>
+					</div>
 			</li>
-			<li><a href="project.html">Project</a>
-				<ul>
-					<li><a href="project.html#chart">Chart</a></li>
-					<li><a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a></li>
-					<li><a href="http://www.moonwards.com/forum/">Forum</a></li>
-				</ul>
+			<li class="dropdown">
+				<a href="project.html">Project</a>
+					<div class="dropdown-content">
+						<a href="project.html#chart">Chart</a>
+						<a target="_blank" href="http://moonwards1.blogspot.com/">Blogger</a>
+						<a href="http://www.moonwards.com/forum/">Forum</a>
+					</div>
 			</li>
-			<li><a href="learn.html">Learn</a>
-				<ul>
-					<li><a href="learn.html#interactives">Interactives</a></li>
-					<li><a href="learn.html#lessons">Lessons</a></li>
-				</ul>
+			<li class="dropdown">
+				<a href="learn.html">Learn</a>
+					<div class="dropdown-content">
+						<a href="learn.html#interactives">Interactives</a>
+						<a href="learn.html#lessons">Lessons</a>
+					</div>
 			</li>
 		</ul>
 	</nav>
