--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -27,7 +27,7 @@ $(document).ready(function() {
 	</head>
 <body>
 {%include obsolete-warning.html %}
-{%include signav.html%}
+{%include nav.html%}
 {{content}}
 </body>
 </html>
